5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1771_762.log
== SUBMITION (2019-05-25 15:10:40) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
date=input("digite a date:")
c=int(date[2:4])
print(date[;2]"de",vet_mes[c-2],"de",date[4:2])
-- EXECUTION TIME:
0.194224
-- ERROR:
  File "/home/codebench/codes/1771/762/main.py", line 6
    print(date[;2]"de",vet_mes[c-2],"de",date[4:2])
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 15:11:22) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
date=input("digite a date:")
c=int(date[2:4])
print(date[;2]"dd",vet_mes[c-2],"de",date[4:2])
-- EXECUTION TIME:
0.192565
-- ERROR:
  File "/home/codebench/codes/1771/762/main.py", line 6
    print(date[;2]"dd",vet_mes[c-2],"de",date[4:2])
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 15:11:29) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
date=input("digite a date:")
c=int(date[2:4])
print(date[:2]"dd",vet_mes[c-2],"de",date[4:2])
-- EXECUTION TIME:
0.15893
-- ERROR:
  File "/home/codebench/codes/1771/762/main.py", line 6
    print(date[:2]"dd",vet_mes[c-2],"de",date[4:2])
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 15:27:15) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
date=input("digite a date:")
c=int(date[])
print(date[:2]"dd",vet_mes[3:5],"de",date[-4:])
-- EXECUTION TIME:
0.139639
-- ERROR:
  File "/home/codebench/codes/1771/762/main.py", line 5
    c=int(date[])
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 15:30:45) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
date=input("digite a date:")
c=int(date[:2])
print(date[:2]"dd",vet_mes[2:4],"de",date[-4:])
-- EXECUTION TIME:
0.204764
-- ERROR:
  File "/home/codebench/codes/1771/762/main.py", line 6
    print(date[:2]"dd",vet_mes[2:4],"de",date[-4:])
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 15:31:00) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
date=input("digite a date:")
c=int(date[8:2])
print(date[:2]"dd",vet_mes[2:4],"de",date[-4:])
-- EXECUTION TIME:
0.182302
-- ERROR:
  File "/home/codebench/codes/1771/762/main.py", line 6
    print(date[:2]"dd",vet_mes[2:4],"de",date[-4:])
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:22:50) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
date=input("digite a date:")
c=int(date[2:4])
print(date[:2]"de",vet_mes[n-1],"de",date[4:8])
-- EXECUTION TIME:
0.160272
-- ERROR:
  File "/home/codebench/codes/1771/762/main.py", line 6
    print(date[:2]"de",vet_mes[n-1],"de",date[4:8])
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:23:48) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d=input("digite a data:")
c=int(d[2:4])
print(d[:2]"de",vm[n-1],"de",d[4:8])
-- EXECUTION TIME:
0.178096
-- ERROR:
  File "/home/codebench/codes/1771/762/main.py", line 6
    print(d[:2]"de",vm[n-1],"de",d[4:8])
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:24:02) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d=input("digite a data:")
c=int(d[2:4])
print(d[:2]"de",vm[n-1],"de",d[4:8])
-- EXECUTION TIME:
0.144075
-- ERROR:
  File "/home/codebench/codes/1771/762/main.py", line 6
    print(d[:2]"de",vm[n-1],"de",d[4:8])
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:24:06) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d=input("digite a data:")
c=int(d[2:4])
print(d[:2]"de",vm[n-1],"de",d[4:8])
-- EXECUTION TIME:
0.15404
-- ERROR:
  File "/home/codebench/codes/1771/762/main.py", line 6
    print(d[:2]"de",vm[n-1],"de",d[4:8])
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:24:35) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d=input("digite a data:")
c=int(d[2:4])
print(d[:2]"de",vm[n-1],"de",d[4:8])
-- ERROR:
File "XXXX", line 6
    print(d[:2]"de",vm[n-1],"de",d[4:8])
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:25:11) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d=input("digite a data:")
c=int(d[2:4])
print(d[:2],"de",vm[n-1],"de",d[4:8])
-- EXECUTION TIME:
0.546467
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/762/main.py", line 6, in <module>
    print(d[:2],"de",vm[n-1],"de",d[4:8])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:25:27) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d=input("digite a data:")
c=int(d[2:4])
print(d[:2], "de",vm[n-1], "de",d[4:8])
-- EXECUTION TIME:
0.530772
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/762/main.py", line 6, in <module>
    print(d[:2], "de",vm[n-1], "de",d[4:8])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:25:31) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d=input("digite a data:")
c=int(d[2:4])
print(d[:2], "de",vm[n-1],"de",d[4:8])
-- EXECUTION TIME:
0.455569
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/762/main.py", line 6, in <module>
    print(d[:2], "de",vm[n-1],"de",d[4:8])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:25:32) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d=input("digite a data:")
c=int(d[2:4])
print(d[:2], "de",vm[n-1],"de",d[4:8])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:25:34) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d=input("digite a data:")
c=int(d[2:4])
print(d[:2], "de",vm[n-1],"de",d[4:8])
-- EXECUTION TIME:
0.703347
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/762/main.py", line 6, in <module>
    print(d[:2], "de",vm[n-1],"de",d[4:8])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:25:35) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d=input("digite a data:")
c=int(d[2:4])
print(d[:2], "de",vm[n-1],"de",d[4:8])
-- EXECUTION TIME:
0.908314
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/762/main.py", line 6, in <module>
    print(d[:2], "de",vm[n-1],"de",d[4:8])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:25:35) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d=input("digite a data:")
c=int(d[2:4])
print(d[:2], "de",vm[n-1],"de",d[4:8])
-- EXECUTION TIME:
1.32292
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/762/main.py", line 6, in <module>
    print(d[:2], "de",vm[n-1],"de",d[4:8])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:25:58) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d=input("digite a data:")
c=int(d[2:4])
print(d[:2], "de",vm[c-1],"de",d[4:8])
-- EXECUTION TIME:
0.5986
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
